# scrobgoblin

./: CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  LICENSE  README.md  ROADMAP.md  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-31-now-playing.md  2026-05-31-scroblin.md  2026-06-01-plex-jellyfin-auth.md  2026-06-04-plex-now-playing.md  2026-07-21-scrobble-target-trait.md
docs/superpowers/specs/: 2026-05-31-scroblin-design.md  2026-06-01-plex-jellyfin-auth-design.md  2026-06-04-plex-now-playing-design.md  2026-07-21-scrobble-target-trait-design.md
docs/testing/: 2026-06-04-integration-test-results.md  2026-07-21-scrobble-target-trait-production-test-plan.md
src/: config.rs  event.rs  main.rs  router.rs  threshold.rs
src/sources/: jellyfin.rs  mod.rs  navidrome.rs  plex.rs
src/targets/: koito.rs  lastfm.rs  listenbrainz.rs  mod.rs
