[package]
name = "scrobgoblin"
version = "0.1.0"
edition = "2021"
description = "Webhook server that normalizes play events from Navidrome, Plex, and Jellyfin and fans them out to Koito, ListenBrainz, and Last.fm"
license = "MIT"
repository = "https://github.com/pghaven/scrobgoblin"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
mockito = "1"
tower = { version = "0.5", features = ["util"] }
http = "1"
